# weekly_menu

./: .coveragerc  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  weekly_menu.postman_collection.json
.github/workflows/: wflow.yaml
app/: config.py  router.py  server.py
app/api/: ingredients.py  recipe.py  weekly_menu.py
app/commons/: database.py  errors.py  logger.py  response.py  schema.py  utils.py
pg-data/base/13395/: pg_internal.init
pg-data/base/16384/: 1247  1249  1259  16385  16387  16391  16393  16401  16402  16404  16410  16422  16423  16424  16432  16433  16440  16441  16447  16454  16455  16461  16463  16469  16482  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  (+14 more)
pg-data/global/: 1260  1262  2671  pg_control  pg_internal.init
pg-data/pg_stat/: db_0.stat  db_13395.stat  db_16384.stat  global.stat
production_files/: uwsgi.ini
tests/: utils_test.py
