[tool.poetry]
name = "weekly_menu"
version = "0.1.0"
description = ""
authors = ["ninz <nreclarin@gmail.coml>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
peewee = "^3.14.4"
cerberus = "^1.3.3"
marshmallow = "^3.11.1"
psycopg2 = "^2.8.6"
uwsgi = "^2.0.19"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pymysql = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
